--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_svg: ^2.0.10+1
+  gap: ^3.0.1
+  web_smooth_scroll: ^1.1.0
+  flutter_hooks: ^0.20.5
 
 dev_dependencies:
   flutter_test:
