--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: portfolio
-description: "A new Flutter project."
+description: "Personal Portfolio"
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -21,75 +21,41 @@ version: 1.0.0+1
 environment:
   sdk: '>=3.2.6 <4.0.0'
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.10+1
   gap: ^3.0.1
   flutter_hooks: ^0.20.5
-  intl: ^0.18.1
-  easy_localization: ^3.0.5
+  intl: ^0.19.0
+  easy_localization: ^3.0.7
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^3.0.2
 
-# For information on the generic Dart part of this file, see the
-# following page: https://dart.dev/tools/pub/pubspec
 
-# The following section is specific to Flutter packages.
 flutter:
   uses-material-design: true
   assets:
     - assets/icons/
     - assets/images/
-    - assets/fonts/
     - assets/translations/
+    - assets/fonts/
 
   fonts:
-    - family: Plus Jakarta Sans
+    - family: Raleway
       fonts:
-        - asset: assets/fonts/plus_jakarta_sans/PlusJakartaSans-ExtraLight.ttf
-          weight: 200
-        - asset: assets/fonts/plus_jakarta_sans/PlusJakartaSans-Light.ttf
-          weight: 300
-        - asset: assets/fonts/plus_jakarta_sans/PlusJakartaSans-Regular.ttf
-          weight: 400
-        - asset: assets/fonts/plus_jakarta_sans/PlusJakartaSans-Medium.ttf
-          weight: 500
-        - asset: assets/fonts/plus_jakarta_sans/PlusJakartaSans-SemiBold.ttf
-          weight: 600
-        - asset: assets/fonts/plus_jakarta_sans/PlusJakartaSans-Bold.ttf
+        - asset: assets/fonts/Raleway/Raleway-Bold.ttf
           weight: 700
-        - asset: assets/fonts/plus_jakarta_sans/PlusJakartaSans-ExtraBold.ttf
+        - asset: assets/fonts/Raleway/Raleway-ExtraBold.ttf
           weight: 800
 
     - family: Inter
       fonts:
-        - asset: assets/fonts/inter/Inter-Thin.ttf
-          weight: 100
-        - asset: assets/fonts/inter/Inter-ExtraLight.ttf
-          weight: 200
-        - asset: assets/fonts/inter/Inter-Light.ttf
-          weight: 300
-        - asset: assets/fonts/inter/Inter-Regular.ttf
+        - asset: assets/fonts/Inter/Inter-Regular.ttf
           weight: 400
-        - asset: assets/fonts/inter/Inter-Medium.ttf
-          weight: 500
-        - asset: assets/fonts/inter/Inter-SemiBold.ttf
-          weight: 600
-        - asset: assets/fonts/inter/Inter-Bold.ttf
+        - asset: assets/fonts/Inter/Inter-Bold.ttf
           weight: 700
