--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,8 +25,9 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^2.0.10+1
-  gap: ^3.0.1
   flutter_hooks: ^0.20.5
+  marqueer: ^1.4.4
+  gap: ^3.0.1
   intl: ^0.19.0
   easy_localization: ^3.0.7
 
@@ -34,7 +35,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^3.0.2
+  flutter_lints: ^4.0.0
 
 
 flutter:
