--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,10 @@ dependencies:
     sdk: flutter
   #  marqueer: ^2.0.1
   flutter_svg: ^2.0.10+1
+  flutter_riverpod: ^2.6.1
   flutter_hooks: ^0.20.5
+  hooks_riverpod: ^2.6.1
+  shared_preferences: ^2.3.5
   sizer: 3.0.5
   gap: ^3.0.1
   intl: ^0.19.0
