--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,12 +24,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  #  marqueer: ^2.0.1
+
+  cupertino_icons: ^1.0.8
   flutter_svg: ^2.0.10+1
   flutter_riverpod: ^2.6.1
   flutter_hooks: ^0.20.5
   hooks_riverpod: ^2.6.1
   shared_preferences: ^2.3.5
+  gradient_borders: ^1.0.1
+  universal_html: ^2.2.4
   gap: ^3.0.1
   intl: ^0.19.0
   easy_localization: ^3.0.7
